tests/files/invalid_blendfiles/invalid_block_struct_index.blend
version https://git-lfs.github.com/spec/v1
oid sha256:a81e3d87a6b34564bfb43593ec1d182348873de1b8b8f1b299431518d978ad1f
size 81173
